# ember-v2

./: ..\..\..\windows\system32  .gitignore  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE.md  CLI_CONTEXT_INTEGRATION_PLAN.md  CONTRIBUTING.md  CONVERGENCE_PLAN.md  DEEPER_API_ANALYSIS.md  DEEP_REFACTOR_SUMMARY.md  EMBER_EXAMPLES_IMPROVEMENT_PLAN.md  EMBER_VALIDATION_SUMMARY.md  EMBER_VALIDATOR_MIGRATION.md  EXAMPLES_GOLDEN_TESTING_REPORT.md  EXAMPLES_IMPROVEMENT_PLAN.md  EXAMPLES_IMPROVEMENT_SUMMARY.md  EXAMPLES_REDESIGN.md  EXAMPLES_UPDATE_TRACKER.md  EXAMPLE_MIGRATION_GUIDE.md  Ember_XCS_Enhancement_and_Expansion_Design_Doc_DRAFT.md  FINAL_GOLDEN_TESTING_STATUS.md  FINAL_TEST_RESULTS.md  GOLDEN_TESTING_FINAL_STATUS.md  GOLDEN_TESTS_STATUS.md  GOOGLE_STYLE_GUIDE_COMPLIANCE.md  IDEAL_EXAMPLES_STRUCTURE.md  IMMEDIATE_FIXES.md  INSTALLATION_GUIDE.md  LICENSE  LLM_SPECIFICATIONS.md  LMMODULE_MIGRATION_GUIDE.md  LMMODULE_REMOVAL_TACTICAL_PLAN.md  LOGGING_IMPROVEMENT_PLAN.md  MIGRATION_PROGRESS_UPDATE.md  MIGRATION_STATUS_REPORT.md  MIGRATION_TRACKER.md  NATURAL_API_IMPLEMENTATION_SUMMARY.md  OPERATOR_MIGRATION_SPEC.md  OPERATOR_REDESIGN.md  OPERATOR_ROOT_CAUSE_ANALYSIS.md  OPERATOR_SYSTEM_ANALYSIS.md  (+51 more)
.github/workflows/: test-examples.yml  tests.yml  update-pricing.yml
.internal/: API_NAMING_BRAINSTORM.md  BACKPORT_TO_ORIGINAL_EMBER.md  CLEANUP_SUMMARY.md  CLEAN_IMPLEMENTATION_PLAN.md  CRITICAL_PATH_ISSUES.md  DEBUGGING.md  DOCUMENTATION_EXCELLENCE_SUMMARY.md  ENVIRONMENT_MANAGEMENT.md  EXAMPLES_IMPLEMENTATION_PLAN.md  Ember_XCS_Enhancement_and_Expansion_Design_Doc_DRAFT.md  FINAL_BACKPORT_RECOMMENDATIONS.md  JIT_PERFORMANCE_TRUTH.md  JIT_PERFORMANCE_VERIFICATION_PLAN.md  JIT_SELECTION_VISUAL_COMPARISON.md  JIT_STRATEGY_SELECTION.md  LMMODULE_REMOVAL_PLAN.md  MERGE_PLAN.md  MIGRATION_GUIDE_SIMPLE.md  MIGRATION_TO_SIMPLE.md  README.md  STRUCTURAL_VS_TRACE_JIT.md  TESTING_INSTALLATION.md  TEST_UPDATE_PLAN.md  XCS_CLEAN_SEPARATION.md  XCS_ENGINE_REMOVAL_SUMMARY.md  XCS_FINAL_DESIGN.md  XCS_MIGRATION_SIMPLE.md  XCS_SIMPLE_EXECUTOR_EXAMPLE.md  XCS_SIMPLIFICATION_COMPLETE.md  XCS_SIMPLIFIED_DESIGN_AND_IMPLEMENTATION.md  XCS_ULTIMATE_SIMPLIFICATION.md  XCS_UNIFIED_EXECUTOR_SUMMARY.md  api_sketch_slides.md  operator_docstring_review.md  xcs_claude_validation.md  xcs_clean_ir_design.md  xcs_final_accomplishments.md  xcs_final_review.md  xcs_implementation_roadmap.md  xcs_implementation_summary.md  (+7 more)
.internal/analysis/: DATA_MODULE_COMPARISON_TABLE.md  DATA_MODULE_CRITICAL_REVIEW.md  DATA_MODULE_IMPROVEMENTS.md  OPERATORS_COMPARISON_ANALYSIS.md  OPERATORS_MASTER_PLAN_REVIEW.md  OPERATORS_REVIEW_AND_IMPROVEMENTS.md  data_api_comparison.md
.internal/design/: INITIALIZATION_REDESIGN.md  SMART_DISCOVERY_DESIGN.md
.internal/design_docs/: ARCHITECTURAL_SIMPLIFICATION.md  ARCHITECTURAL_VISION.md  ARCHITECTURE_DECISION.md  COMPREHENSIVE_DESIGN_REVIEW.md  DATA_DOCUMENTATION_IMPROVEMENTS.md  DATA_METADATA_PHILOSOPHY.md  DESIGN_REVIEW.md  DESIGN_SUMMARY.md  EMBER_EVOLUTION_ANALYSIS.md  EQUINOX_COMPARISON.md  EQUINOX_INTEGRATION_DESIGN.md  EXECUTIVE_ACTION_PLAN.md  EXTERNAL_MODEL_REGISTRY_DEPENDENCIES.md  FINAL_IMPLEMENTATION_PLAN.md  FINAL_OPERATOR_DESIGN.md  HYBRID_MODULE_DESIGN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODO.md  IMPROVEMENTS_SUMMARY.md  INTERNAL_SIMPLIFICATION_PLAN.md  INTERNAL_SIMPLIFICATION_PLAN_FINAL.md  IR_SYSTEM_VISION.md  LEAKY_ABSTRACTIONS_ANALYSIS.md  LEAKY_ABSTRACTION_REVIEW.md  MENTOR_PERSPECTIVES_ON_IMPROVEMENTS.md  MIGRATION_STATUS.md  MINIMAL_IMPROVEMENTS_SUMMARY.md  MINIMAL_OPERATOR_IMPROVEMENTS.md  MINIMAL_XCS_IMPROVEMENTS.md  MODELS_MIGRATION_COMPLETE.md  MODELS_MIGRATION_COMPLETE_FINAL.md  MODELS_MIGRATION_PLAN.md  MODELS_MODULE_IMPLEMENTATION_PLAN_FINAL.md  MODELS_REGISTRY_ARCHITECTURE_DOC.md  MODULE_MIGRATION_GUIDE.md  (+63 more)
.internal_docs/: ADDITIONAL_CLEANUP_SUMMARY.md  COMMENT_STYLE_IMPROVEMENTS.md  DOCUMENTATION_EXCELLENCE_TRACKER.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXAMPLES_UPDATE_TRACKER.md  FINAL_TEST_CLEANUP_SUMMARY.md  GRADIENT_FIX_SUMMARY.md  JIT_SELECTION_REDESIGN.md  LMMODULE_REMOVAL_SUMMARY.md  MERGE_SUMMARY.md  OPERATOR_GRAPH_INTEGRATION.md  OPERATOR_UX_DESIGN.md  README.md  TEST_CLEANUP_SUMMARY.md  XCS_BEFORE_AFTER.md  XCS_CLEANUP_PLAN.md  XCS_EXECUTION_MIGRATION.md  XCS_EXECUTION_SIMPLIFICATION.md  XCS_FINAL_VISION.md  XCS_FIXES_SUMMARY.md  XCS_GRAPH_AS_IR_TECHNICAL_DETAILS.md  XCS_IMPLEMENTATION_CHECKLIST.md  XCS_IMPLEMENTATION_SUMMARY.md  XCS_MAGICAL_PARALLELIZATION.md  XCS_PARALLELISM_INVESTIGATION_PLAN.md  XCS_PROPAGATION_PLAN.md  XCS_SIMPLIFICATION_SUMMARY.md  XCS_TEST_CLEANUP_SUMMARY.md  XCS_TEST_PLAN.md
benchmarks/: measure_real_performance.py  run_benchmarks.py
docs/: CONTEXT_SYSTEM.md  QUICK_REFERENCE.md  README.md  SIMPLIFICATION_GUIDE.md  architecture.md  exceptions_guide.md  getting_started.md  performance.md  xcs_examples.py
examples/: 01_hello_world.py  02_structured_output.py  03_batch_processing.py  04_error_handling.py  MIGRATION_TODO.md  README.md  __init__.py  example_simplified_imports.py  learnable_router_example.py  migration_guide.py  operators_examples.py  progressive_disclosure.py  quickstart.ipynb  requirements.txt  runner.py  xcs_transformation_patterns.py
integrations/: README.md  __init__.py
scripts/: analyze_lmmodule_usage.py  migrate_lmmodule.py  migrate_test_lmmodule.py  validate_migration.py
src/: .gitignore
tests/: IMPLEMENTATION_NOTES.md  README.md  TESTING_PRINCIPLES.md  TEST_FIX_PLAN.md  TEST_IMPLEMENTATION_TRACKER.md  TEST_INFRASTRUCTURE_DESIGN.md  TEST_PLAN.md  TEST_STATUS_SUMMARY.md  TEST_TODO.md  WEEK1_COMPLETION_SUMMARY.md  conftest.py  diagnostic_test_validator.py  fix_test_imports.py  fixtures.py  mocks.py  pytest.ini  run_test_suite.py  simple_import_test.py  test_aime_implementation.py  test_constants.py  test_doubles.py  test_fixtures.py  test_import.py  test_simplified_imports.py  test_simplified_xcs_imports.py  test_test_doubles.py  test_xcs_basic.py
tmp/: FINAL_STATUS.md  FORGE_COMPLETE.md  FORGE_COMPLETENESS_REPORT.md  FORGE_IMPLEMENTATION_SUMMARY.md  MIXED_PROVIDER_DESIGN.md  NEW_DESIGN.md
(+1166 files in other folders)
